--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="row d-flex flex-column align-items-center" id="right-sub-row">
                         <!-- profile image -->
                         <div class="col-md-3 text-center" id="img">
-                            <img src="/task1/zaid.png" alt="Profile Image" class="img-fluid rounded-circle">
+                            <img src="zaid.png" alt="Profile Image" class="img-fluid rounded-circle">
                         </div>
                         <!-- name and title -->
                         <div class="col-md-3" id="name">
